Cycles viewport textured shadeless issue #47051

Closed
opened 2015-12-23 16:36:58 +01:00 by Dalai Felinto · 4 comments

System Information
Mac OSX 10.11, AMD Radeon HD 6750M
Linux, Nvidia (I can get the model later, if it's relevant)

Blender Version
Broken: master (2.76.4 887829e3)
Worked: 2.76

Short description of error

Exact steps for others to reproduce the error
Open this file: shadeless.blend

If you select shadeless mode and select the object, the selected color affects the texture:
shadeless_selected.jpg

If you select shadeless mode and unselect the object, you get pitch black:
shadeless_unselected.jpg

If you disable shadeless mode, things work when the object is selected:
unshadeless_selected.jpg

Or unselected:
unshadeless_unselected.jpg

The problem was introduced on 147f7a1e

**System Information** Mac OSX 10.11, AMD Radeon HD 6750M Linux, Nvidia (I can get the model later, if it's relevant) **Blender Version** Broken: master (2.76.4 887829e3) Worked: 2.76 **Short description of error** **Exact steps for others to reproduce the error** Open this file: [shadeless.blend](https://archive.blender.org/developer/F270156/shadeless.blend) If you select shadeless mode and select the object, the selected color affects the texture: ![shadeless_selected.jpg](https://archive.blender.org/developer/F270150/shadeless_selected.jpg) If you select shadeless mode and unselect the object, you get pitch black: ![shadeless_unselected.jpg](https://archive.blender.org/developer/F270148/shadeless_unselected.jpg) If you disable shadeless mode, things work when the object is selected: ![unshadeless_selected.jpg](https://archive.blender.org/developer/F270149/unshadeless_selected.jpg) Or unselected: ![unshadeless_unselected.jpg](https://archive.blender.org/developer/F270151/unshadeless_unselected.jpg) The problem was introduced on 147f7a1e
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Dalai Felinto 2015-12-23 16:36:58 +01:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto changed title from Cycles to Cycles viewport textured shadeless issue 2015-12-23 16:38:45 +01:00

This issue was referenced by 93c75bf992

This issue was referenced by 93c75bf99205504d5cec35829813af23b48d7cb0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47051
No description provided.