Fix T47051: cycles viewport textured shadeless draw bug.