source/blender/gpu/intern/gpu_draw.c
@@ -2113,6 +2113,7 @@ void GPU_state_init(void)
 	glDisable(GL_STENCIL_TEST);
 	glDisable(GL_TEXTURE_1D);
 	glDisable(GL_TEXTURE_2D);
+	glTexEnvi(GL_TEXTURE_ENV, GL_TEXTURE_ENV_MODE, GL_MODULATE);
 
 	/* default disabled, enable should be local per function */
 	glDisableClientState(GL_VERTEX_ARRAY);
